# arc

./: LICENSE  README.md  __arc_main__.py  __test_arc__.py  filters.py  make_gas.py  pyproject.toml  raman_scattering.py  utilities.py  vibrational_scattering.py
extra_scripts/: Filter_width_Bsc-Cross-Sec.py  Line_spectra_RR_VRR.py  __raman_moving_filters__.py  beam_simulator.py  combine_errors.py  rr_error_simulator.py
extra_scripts/functions/: angle_calculator.py  miscellaneous.py  rr_calculator.py
modules/: check_input.py  filters.py  functions.py  isotropic_polarizability.py
test/: test_molecular_properties.py  test_raman_scattering.py  test_rayleigh_scattering_bucholtz.py  test_refractive_index.py  test_scattering.py
