[tool.poetry]
name = "arc"
version = "1.0.0"
description = ""
authors = ["nsiomos <nikolaos.siomos@lmu.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.24.2"
scipy = ">=1.10.1"
matplotlib = ">=3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
